# investment-app

./: README.md  README.txt  pyproject.toml
PersonalPortfolioApp/: PersonalPortfolioApp.pyproj  api.py  bootstrap.py  cli.py  database.py  portfolio.py  service.py  stock.py  user.py  visualizer.py
PersonalPortfolioApp/domain_models/: portfolio.py  stock.py  user.py
PersonalPortfolioApp/interface_layer/: cli.py  visualizer.py
PersonalPortfolioApp/service_layer/: service.py
data/: edgexchange.db
diagrams/: mermaid-source.md
images/: mermaid-source.md
investment-app/: bootstrap.py  investment-app.pyproj  investment_app.py  requirements.txt
investment-app/common/: __init__.py  chaos.py  entropy.py
investment-app/config/: __init__.py  bootstrap.py
investment-app/domain_models/: user.py
investment-app/integration_layer/: __init__.py  externalapi.py  frontendapi.py  pydmodels.py  routes.py
investment-app/interface_layer/: cli.py  frontend.py  visualizer.py
investment-app/persistence_layer/: database.py
investment-app/sanitization_layer/: sanitizer.py
investment-app/service_layer/: service.py
investment-app/validation_layer/: validator.py
src/edgexchange/: edgexchange.py
src/edgexchange/config/: bootstrap.py
src/edgexchange/domain_models/: portfolio.py  user.py
src/edgexchange/integration_layer/: externalapi.py  routes.py
src/edgexchange/interface_layer/: __init__.py  cli.py  frontend.py
src/edgexchange/persistence_layer/: database.py
src/investment_app/: investment_app.py
src/stockify/: stockify.py
(+39 files in other folders)
