[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "EdgeXchange"
version = "0.1.0"
description = "An app that allows for making mock investments with real market data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "yfinance>=0.2.37",
    "bcrypt>=4.1.0",
    "tabulate>=0.9.0"
]

[project.scripts]
edgexchange = "edgexchange.edgexchange:main"